<resources>
    <string name="app_name"></string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="enter_a_email_address">Enter a email address</string>
    <string name="enter_a_mobile_number">Enter a mobile number</string>
    <string name="enter_a_strong_password">Enter a strong password</string>
    <string name="signup">signup</string>
    <string name="login">Sign In</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="home">Home</string>
    <string name="person">person</string>
    <string name="profile">Profile</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="welcome_back">Welcome back you have</string>
    <string name="welcome_back1">been missed!</string>
    <string name="heading1">Heading</string>
    <string name="heading2">Heading</string>
    <string name="heading3">Heading</string>
    <string name="heading4">Heading</string>
    <string name="desc1">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece.</string>
    <string name="desc2">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece.</string>
    <string name="desc3">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece.</string>
    <string name="desc4">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece.</string>
    <string name="or">Or continue with</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register_now">Register now</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_username">Enter username</string>
    <string name="mobile_number">Mobile number</string>
    <string name="already_a_user">Already a user?</string>
    <string name="log_in">Log In</string>
    <string name="hello">Hello,</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_to_play">How to play</string>
    <string name="refer_and_earn">Refer and earn</string>
    <string name="current_amount">&#x20B9;</string>
</resources>