<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".RegisterActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30mm"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="-28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome"
                android:textSize="26sp"
                android:fontFamily="@font/gotham_bold"
                android:textColor="@color/brown"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="We are glad to see you"
                android:textSize="18sp"
                android:fontFamily="@font/gotham_book"
                />
<!--            <View-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="4dp"/>-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/welcome_back1"-->
<!--                android:textSize="20sp"-->
<!--                android:fontFamily="@font/gotham_book"-->
<!--                />-->
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="54mm"
            android:layout_height="58dp"
            android:layout_gravity="center"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:background="@drawable/rounded_button"
                android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="54mm"
            android:layout_height="58dp"
            android:layout_gravity="center"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:background="@drawable/rounded_button"
                android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="54mm"
            android:layout_height="58dp"
            android:layout_gravity="center"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:background="@drawable/rounded_button"
                android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="54mm"
            android:layout_height="58dp"
            android:layout_gravity="center"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:background="@drawable/rounded_button"
                android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="54mm"
            android:layout_height="58dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTintMode="multiply"
            android:layout_gravity="center"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:background="@drawable/rounded_button"
                android:cursorVisible="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="54mm"
            android:layout_height="56dp"
            android:text="@string/login"
            android:fontFamily="@font/gotham_bold"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button2"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_bold"
                android:text="@string/already_a_user"/>
            <View
                android:layout_width="3dp"
                android:layout_height="0dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:fontFamily="@font/gotham_bold"
                android:textColor="@color/malachite_green"
                android:onClick="LoggingIn"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>